# bevy_dodgy

./: Cargo.toml  README.md
crates/bevy_dodgy_2d/: Cargo.toml  README.md
crates/bevy_dodgy_2d/examples/: circle.rs  line.rs  random_spawn.rs  simple.rs
crates/bevy_dodgy_2d/src/: agents.rs  common.rs  debug.rs  lib.rs  linear_programming.rs  obstacles.rs  plugin.rs  simulator.rs  system.rs  visibility_set.rs
crates/bevy_dodgy_3d/: Cargo.toml
crates/bevy_dodgy_3d/src/: lib.rs
crates/dodgy_3d/src/: lib.rs  linear_programming.rs
examples/: circle.rs  line.rs  random_spawn.rs
src/: agents.rs  debug.rs  geometry.rs  lib.rs  obstacles.rs  systems.rs
