[package]
name = "bevy_dodgy"
version = "0.5.0"
edition = "2021"

license = "MIT OR Apache-2.0"

categories = ["game-development"]
keywords = ["orca", "rvo", "collision", "avoidance", "navigation"]

[dependencies]
avian3d = "0.1"
dodgy_2d = { git = "https://github.com/Wiwip/bevy_dodgy.git" }
rand = "0.8.5"

[dependencies.bevy]
version = "0.14"
features = ["dynamic_linking"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3
