[package]
name = "bevy_dodgy"
version = "0.5.0"
edition = "2021"

license = "MIT OR Apache-2.0"

categories = ["game-development"]
keywords = ["orca", "rvo", "collision", "avoidance", "navigation"]

[dependencies]
avian3d = { git = "https://github.com/Jondolf/avian.git" }
dodgy_2d = { git = "https://github.com/Wiwip/dodgy.git" }
rand = "0.9.0-alpha.2"

[dependencies.bevy]
version = "0.15.0"
features = ["dynamic_linking"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3
