[package]
edition = "2021"
name = "bevy_dodgy_2d"
version = "0.5.0"

description = "An implementation of ORCA, a local collision avoidance algorithm for 2D."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andriyDev/dodgy"

categories = ["game-development"]
keywords = ["orca", "rvo", "collision", "avoidance", "navigation"]

#[dependencies]
#glam = "0.28.0"

[dependencies.bevy]
version = "0.14.0-rc.3"
features = ["dynamic_linking"]
[dependencies]
log = "0.4.21"