[package]
edition = "2021"
name = "bevy_dodgy_2d"
version = "0.5.0"

description = "An implementation of ORCA, a local collision avoidance algorithm for 2D."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andriyDev/dodgy"

categories = ["game-development"]
keywords = ["orca", "rvo", "collision", "avoidance", "navigation"]

[dependencies.bevy]
version = "0.13"
features = ["dynamic_linking"]

[dependencies]
bevy_xpbd_2d = "0.4.2"

[dev-dependencies]
rand = "0.9.0-alpha.1"


[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
